--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -8,6 +8,17 @@ body:
       value: |
         [How to Request a Feature in CLI](https://github.com/Azure/azure-cli/blob/dev/doc/how_to_request_a_feature_in_cli.md)
         [A Great Example](https://github.com/Azure/azure-cli/issues/22275)
+  - type: checkboxes
+    id: checklist
+    attributes:
+      label: IS SDK Ready
+      description: |
+        If you need to upgrade the api-version, please ensure that the python SDK is ready. 
+        You can refer to the above documents to release a new version of the python SDK:
+        - https://github.com/Azure/azure-rest-api-specs/wiki/Abstract-about-how-to-ask-for-public-SDK-release
+        - https://github.com/Azure/azure-rest-api-specs/blob/main/documentation/release-request/rules-for-release-request.md
+      options:
+        required: true
   - type: textarea
     id: command
     attributes:
