--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -18,7 +18,8 @@ body:
         - https://github.com/Azure/azure-rest-api-specs/wiki/Abstract-about-how-to-ask-for-public-SDK-release
         - https://github.com/Azure/azure-rest-api-specs/blob/main/documentation/release-request/rules-for-release-request.md
       options:
-        required: true
+        - label: No need to upgrade api-version or the python SDK is ready.
+          required: true
   - type: textarea
     id: command
     attributes:
