--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -11,7 +11,7 @@ body:
   - type: checkboxes
     id: checklist
     attributes:
-      label: IS SDK Ready
+      label: Preconditions
       description: |
         If you need to upgrade the api-version, please ensure that the python SDK is ready. 
         You can refer to the above documents to release a new version of the python SDK:
