--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -20,6 +20,8 @@ body:
       options:
         - label: No need to upgrade api-version or the python SDK is ready.
           required: true
+    validations:
+      required: true
   - type: textarea
     id: command
     attributes:
