--- a/.github/ISSUE_TEMPLATE/Service_team_request.yml
+++ b/.github/ISSUE_TEMPLATE/Service_team_request.yml
@@ -13,8 +13,9 @@ body:
     attributes:
       label: Preconditions
       description: |
-        If you need to upgrade the api-version, please ensure that the python SDK is ready. 
-        You can refer to the above documents to release a new version of the python SDK:
+        If it is related to a command module that relies on the Python SDK *(the module has not been migrated to Code Gen yet)* and requires upgrading the api-version
+, please ensure that the Python SDK is ready. 
+        You can refer to the above documents to release a new version of the Python SDK:
         - https://github.com/Azure/azure-rest-api-specs/wiki/Abstract-about-how-to-ask-for-public-SDK-release
         - https://github.com/Azure/azure-rest-api-specs/blob/main/documentation/release-request/rules-for-release-request.md
       options:
