--- a/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_managed_instance_mgmt.yaml
+++ b/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_managed_instance_mgmt.yaml
@@ -1719,7 +1719,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
+      - '1199'
     status:
       code: 200
       message: OK
@@ -2299,7 +2299,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '107'
+      - '106'
       content-type:
       - application/json; charset=utf-8
       date:
@@ -4127,7 +4127,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g -n --service-principal-type
+      - -g -n --subnet --vnet-name
       User-Agent:
       - AZURECLI/2.45.0 azsdk-python-mgmt-sql/4.0.0b5 Python/3.9.5 (Windows-10-10.0.22621-SP0)
     method: GET
@@ -4185,7 +4185,7 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1569'
+      - '1371'
       content-type:
       - application/json; charset=utf-8
       date:
