adjust metric name

--- a/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_metric_namespace_special_character.yaml
+++ b/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_metric_namespace_special_character.yaml
@@ -56,7 +56,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Tue, 06 Jun 2023 11:34:55 GMT
+      - Wed, 07 Jun 2023 04:38:21 GMT
       expires:
       - '-1'
       pragma:
@@ -86,9 +86,9 @@ interactions:
       "evaluationFrequency": "PT1M", "windowSize": "PT5M", "targetResourceRegion":
       "westus", "criteria": {"odata.type": "Microsoft.Azure.Monitor.SingleResourceMultipleMetricCriteria",
       "allOf": [{"criterionType": "StaticThresholdCriterion", "name": "cond0", "metricName":
-      "LogicalDisk(C:)", "metricNamespace": "My-Ns", "timeAggregation": "Average",
-      "dimensions": [], "skipMetricValidation": true, "operator": "Equals", "threshold":
-      1.0}]}}}'
+      "\\LogicalDisk(C:)\\% Free Space", "metricNamespace": "My-Ns", "timeAggregation":
+      "Average", "dimensions": [], "skipMetricValidation": true, "operator": "Equals",
+      "threshold": 1.0}]}}}'
     headers:
       Accept:
       - application/json
@@ -99,7 +99,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '716'
+      - '732'
       Content-Type:
       - application/json
       ParameterSetName:
@@ -118,11 +118,11 @@ interactions:
         \r\n    ],\r\n    \"evaluationFrequency\": \"PT1M\",\r\n    \"windowSize\"\
         : \"PT5M\",\r\n    \"criteria\": {\r\n      \"allOf\": [\r\n        {\r\n\
         \          \"threshold\": 1.0,\r\n          \"name\": \"cond0\",\r\n     \
-        \     \"metricNamespace\": \"My-Ns\",\r\n          \"metricName\": \"LogicalDisk(C:)\"\
-        ,\r\n          \"operator\": \"Equals\",\r\n          \"timeAggregation\"\
-        : \"Average\",\r\n          \"skipMetricValidation\": true,\r\n          \"\
-        criterionType\": \"StaticThresholdCriterion\"\r\n        }\r\n      ],\r\n\
-        \      \"odata.type\": \"Microsoft.Azure.Monitor.SingleResourceMultipleMetricCriteria\"\
+        \     \"metricNamespace\": \"My-Ns\",\r\n          \"metricName\": \"\\\\\
+        LogicalDisk(C:)\\\\% Free Space\",\r\n          \"operator\": \"Equals\",\r\
+        \n          \"timeAggregation\": \"Average\",\r\n          \"skipMetricValidation\"\
+        : true,\r\n          \"criterionType\": \"StaticThresholdCriterion\"\r\n \
+        \       }\r\n      ],\r\n      \"odata.type\": \"Microsoft.Azure.Monitor.SingleResourceMultipleMetricCriteria\"\
         \r\n    },\r\n    \"targetResourceRegion\": \"westus\",\r\n    \"actions\"\
         : []\r\n  }\r\n}"
     headers:
@@ -133,11 +133,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1169'
+      - '1185'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Tue, 06 Jun 2023 11:35:07 GMT
+      - Wed, 07 Jun 2023 04:38:33 GMT
       expires:
       - '-1'
       pragma:
