re-record tests

--- a/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/cosmosdb/tests/latest/recordings/test_cosmosdb_locations.yaml
@@ -36,7 +36,7 @@ interactions:
         East","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/brazilsouth/","type":"Microsoft.DocumentDB/locations","name":"Brazil
         South","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/germanywestcentral/","type":"Microsoft.DocumentDB/locations","name":"Germany
         West Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/francecentral/","type":"Microsoft.DocumentDB/locations","name":"France
-        Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/japaneast/","type":"Microsoft.DocumentDB/locations","name":"Japan
+        Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/japaneast/","type":"Microsoft.DocumentDB/locations","name":"Japan
         East","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Zone","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/japanwest/","type":"Microsoft.DocumentDB/locations","name":"Japan
         West","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":false,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/koreasouth/","type":"Microsoft.DocumentDB/locations","name":"Korea
         South","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/germanynorth/","type":"Microsoft.DocumentDB/locations","name":"Germany
@@ -67,16 +67,16 @@ interactions:
         Central","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/malaysiasouth/","type":"Microsoft.DocumentDB/locations","name":"Malaysia
         South","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":false,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Geo","Local"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/italynorth/","type":"Microsoft.DocumentDB/locations","name":"Italy
         North","properties":{"supportsAvailabilityZone":true,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":true,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Local","Zone"]}},{"id":"subscriptionId/23587e98-b6ac-4328-a753-03bcd3c8e744/providers/Microsoft.DocumentDB/locations/israelcentral/","type":"Microsoft.DocumentDB/locations","name":"Israel
-        Central","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Local"]}}]}'
+        Central","properties":{"supportsAvailabilityZone":false,"isResidencyRestricted":true,"isSubscriptionRegionAccessAllowedForAz":false,"isSubscriptionRegionAccessAllowedForRegular":true,"status":"Online","backupStorageRedundancies":["Local","Zone"]}}]}'
     headers:
       cache-control:
       - no-store, no-cache
       content-length:
-      - '21365'
+      - '21371'
       content-type:
       - application/json
       date:
-      - Tue, 30 May 2023 19:20:24 GMT
+      - Thu, 08 Jun 2023 16:49:49 GMT
       pragma:
       - no-cache
       server:
@@ -123,7 +123,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Tue, 30 May 2023 19:20:25 GMT
+      - Thu, 08 Jun 2023 16:49:50 GMT
       pragma:
       - no-cache
       server:
