--- a/.azure-pipelines/templates/azdev_setup.yml
+++ b/.azure-pipelines/templates/azdev_setup.yml
@@ -16,7 +16,7 @@ steps:
       chmod +x env/bin/activate
       . env/bin/activate
       python -m pip install -U pip
-      pip install azdev
+      pip install git+https://github.com/dciborow/azure-cli-dev-tools.git@dciborow/pylint
       azdev --version
 
       if [ -z "$CLI_EXT_REPO_PATH" ]; then
