--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -882,6 +882,12 @@ jobs:
           distro: bullseye
           arch: ${{ arch.value }}
           pool: ${{ arch.pool }}
+        Bookworm ${{ arch.name }}:
+          # 12
+          deb_system: debian
+          distro: bookworm
+          arch: ${{ arch.value }}
+          pool: ${{ arch.pool }}
   steps:
   - bash: ./scripts/ci/install_docker.sh
     displayName: Install Docker
@@ -931,6 +937,11 @@ jobs:
         Bullseye ${{ arch.name }}:
           deb_system: debian
           distro: bullseye
+          arch: ${{ arch.value }}
+          pool: ${{ arch.pool }}
+        Bookworm ${{ arch.name }}:
+          deb_system: debian
+          distro: bookworm
           arch: ${{ arch.value }}
           pool: ${{ arch.pool }}
   pool:
