--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -71,7 +71,7 @@ azure-mgmt-recoveryservicesbackup==6.0.0
 azure-mgmt-redhatopenshift==1.2.0
 azure-mgmt-redis==14.1.0
 azure-mgmt-relay==0.1.0
-azure-mgmt-resource==23.0.1
+azure-mgmt-resource==23.1.0b2
 azure-mgmt-search==9.0.0
 azure-mgmt-security==3.0.0
 azure-mgmt-servicebus==8.2.0
